使用eclipse的控制台特殊性进行文件转移（从涉密区至非涉密区）

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -31,7 +31,7 @@ logger.handlers=CONSOLE
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
 handler.CONSOLE.properties=autoFlush,target
 handler.CONSOLE.target=SYSTEM_ERR
-handler.CONSOLE.level=ALL
+handler.CONSOLE.level=all
 handler.CONSOLE.autoFlush=true
 handler.CONSOLE.formatter=PATTERN
 
